@@ -1,7 +1,17 @@
-#!/bin/bash
+#!/usr/bin/perl
 
-if ! mysql -u cod_reader -h www.crystallography.net cod -e 'select 1' >/dev/null 2>&1
-then
-    echo Test skipped - could not connect to MySQL database
-    exit 1
-fi
+use strict;
+use warnings;
+
+use DBI;
+
+local $SIG{__WARN__} = sub {};
+
+my $dbh = DBI->connect( "dbi:mysql:" .
+                        "hostname=www.crystallography.net;".
+                        "dbname=cod;".
+                        "user=cod_reader;" );
+if( !$dbh ) {
+    print "Test skipped - could not connect to MySQL database\n";
+    exit 1;
+}
