@@ -4,6 +4,7 @@ cod-tools (unreleased)
     - COD::CIF::Parser::Yapp:
       - replaced the COD::ShowStruct module with Data::Dumper
         for debug prints.
+    - dropped test-dependency on 'mysql' command line utility.
   * Deprecated:
     - cif_printout:
       - the --output-struct option.
